# details_app

./: Dockerfile  TASKS.md  build.sh  details.py  docker-compose.yml  pyproject.toml
report/: results.html
src/details/: app.py
src/details/templates/: index.html
tests/: test_app.py
