[tool.poetry]
name = "details"
version = "0.1.0"
description = ""
authors = ["Ori Nahum <orinahum@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.9"
validators = "^0.28.3"
email-validator = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
